--- a/Kotlin/MyCalculator/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/MyCalculator/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,10 @@
         android:layout_height="250dp"
         android:background="#efefef"
         android:textSize="48sp"
-        android:maxLength="12"/>
+        android:maxLength="12"
+        android:padding="10dp"
+        android:gravity="right|center_vertical|bottom"
+        />
 
     <!-- Row 1 -->
     <LinearLayout
@@ -182,7 +185,8 @@
             android:id="@+id/btnEqual"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="="/>
+            android:text="="
+            android:onClick="onEqual"/>
     </LinearLayout>
 
 </LinearLayout>
